[gd_scene load_steps=14 format=3 uid="uid://cb0hf4o221x56"]

[ext_resource type="Texture2D" uid="uid://dca0h17v4k6ti" path="res://assets/sprites/ui/character_panel/character_edge.png" id="1_accij"]
[ext_resource type="Script" path="res://scenes/ui/panels/character_panel.gd" id="1_x8t5m"]
[ext_resource type="Texture2D" uid="uid://croekrnckfqay" path="res://assets/sprites/ui/character_panel/character_container.png" id="2_4bkj8"]
[ext_resource type="Texture2D" uid="uid://dxrlc428dc5t3" path="res://assets/sprites/ui/character_panel/armor_slot.png" id="3_guw3n"]
[ext_resource type="Script" path="res://scenes/ui/panels/armor_slot.gd" id="4_3wq2u"]
[ext_resource type="Texture2D" uid="uid://v2mlbocqy1pk" path="res://assets/sprites/ui/close_button.png" id="4_bwkxf"]
[ext_resource type="Texture2D" uid="uid://byu4ghdsm7x66" path="res://assets/sprites/ui/character_panel/weapon_slot.png" id="4_urd57"]
[ext_resource type="Texture2D" uid="uid://co1jna8u1urfn" path="res://assets/sprites/ui/close_button_pressed.png" id="5_7epa4"]
[ext_resource type="Texture2D" uid="uid://b1m45jtxynek" path="res://assets/sprites/ui/character_panel/shield_slot.png" id="5_gx144"]
[ext_resource type="Texture2D" uid="uid://d77e64wjgw8j" path="res://assets/sprites/ui/character_panel/ring_slot.png" id="6_s25i8"]
[ext_resource type="Texture2D" uid="uid://fmo3okhg8807" path="res://assets/sprites/ui/character_panel/amulet_slot.png" id="7_m3hrd"]

[sub_resource type="SystemFont" id="SystemFont_kd5uy"]
font_names = PackedStringArray("Fantasy")

[sub_resource type="LabelSettings" id="LabelSettings_8h723"]
font = SubResource("SystemFont_kd5uy")
font_size = 18

[node name="CharacterPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x8t5m")

[node name="CharacterEdge" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 225.0
texture = ExtResource("1_accij")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 9

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Character"
label_settings = SubResource("LabelSettings_8h723")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CharacterContainerBG" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_4bkj8")

[node name="CloseButton" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/CharacterContainerBG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0868
offset_top = 3.22708
offset_right = -3.08676
offset_bottom = 14.2271
grow_horizontal = 0
texture_normal = ExtResource("4_bwkxf")
texture_pressed = ExtResource("5_7epa4")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="ArmorSlot" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_guw3n")
expand_mode = 1
stretch_mode = 3
script = ExtResource("4_3wq2u")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 21

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 53
theme_override_constants/v_separation = 22
columns = 2

[node name="WeaponSlot" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_urd57")

[node name="ShieldSlot" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_gx144")

[node name="RingSlot" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_s25i8")

[node name="AmuletSlot" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("7_m3hrd")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="CharacterEdge" to="." method="_on_character_edge_mouse_entered"]
[connection signal="mouse_exited" from="CharacterEdge" to="." method="_on_character_edge_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/CharacterContainerBG/CloseButton" to="." method="_on_close_button_pressed"]
